# rag-ingestion-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile.dagster  Dockerfile.docling  Makefile  README.md  dagster.yaml  docker-compose.yml  implementation_plan.md  pyproject.toml  reprendre_le_projet.md  requirements-dev.txt  requirements.txt
documentation/: SECURITY.md  architecture.md  base_vectorielle.md  extraction_donnees.md  graphe_connaissances.md  llm_integration_plan.md  orchestration.md  rag_evaluation_strategy.md  stockage_objets.md
documentation/services/: chromadb.md  dagster.md  docling.md  minio.md  nebulagraph.md  postgres.md
src/: dagster.yaml  init_nebula.py  verify_data.py  wipe_stores.py  workspace.yaml
src/docling_service/: main.py  requirements.txt  settings.py
src/pipeline/: __init__.py  cleaning.py  definitions.py  factory.py  media.py  resources.py  schemas.py  sensors.py  settings.py  sources.py  sources.yaml
src/pipeline/assets/: core_assets.py  html_assets.py  pdf_assets.py
src/pipeline/prompts/: README.md
src/pipeline/resources/: __init__.py  minio_resource.py  weaviate_resource.py
tests/: conftest.py
tests/unit/: test_cleaning.py  test_factory.py  test_helpers.py  test_schemas.py  test_settings.py  test_sources.py
