[project]
name = "rag-assistant"
version = "0.1.0"
description = "Pipeline d'ingestion RAG : extraction, knowledge graph, vectorisation"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "N",    # pep8-naming
    "ANN",  # flake8-annotations
]
ignore = [
    "ANN401",  # dynamically typed expressions (typing.Any)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/"]
# Dagster/FastAPI decorators are untyped, disable these checks for now
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "dagster.*",
    "docling.*",
    "fitz",
    "minio.*",
    "nebula3.*",
    "chromadb.*",
    "sentence_transformers.*",
    "bs4",
    "fastapi.*",
    "uvicorn",
    "requests.*",
    "pydantic_settings.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: tests requiring heavy infrastructure (NebulaGraph, GPU)",
    "integration: tests requiring Docker services",
]
addopts = "-q --tb=short"
